[build-system]
requires = ["setuptools>=63", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-replyer"
version = "0.1.0"
description = "Application description"
requires-python=">=3.7,<4"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}